--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <a href="https://hockey45.github.io/Kitchen.github.io/Work/" class="work">Лендинг с слайдером на Jquery</a>
-        <a href="https://hockey45.github.io/Kitchen.github.io/rest/" class="rest">Хеддер сайта ресторана</a>
-        <a href="https://hockey45.github.io/Kitchen.github.io/stolovaya/" class="rest">Сайт столового оборудования</a>
-        <a href="https://hockey45.github.io/Kitchen.github.io/realize/" class="rest">Адаптивный сайт на медиазапросах и Bootstrap</a>
+        <div class="row">
+        <div class="col-lg-3"><a href="https://hockey45.github.io/Kitchen.github.io/Work/" class="work">Лендинг с слайдером на Jquery</a></div>
+        <div class="col-lg-3"><a href="https://hockey45.github.io/Kitchen.github.io/rest/" class="rest">Хеддер сайта ресторана</a></div>
+        <div class="col-lg-3"><a href="https://hockey45.github.io/Kitchen.github.io/stolovaya/" class="rest">Сайт столового оборудования</a></div>
+        <div class="col-lg-3"><a href="https://hockey45.github.io/Kitchen.github.io/realize/" class="rest">Адаптивный сайт на медиазапросах и Bootstrap</a></div>
+        </div>
     </div>
 </body>
 </html>
