--- a/rest/index.html
+++ b/rest/index.html
@@ -73,7 +73,7 @@
 					</div>
 					<div class="col-md-7">
 						<div class="image-block1">
-							<img src="img/about-img.png" alt="about">
+							<img src="img/about-img.png" alt="about" class='adaptiv'>
 							<div class="yelow-rectangle">
 
 							</div>
@@ -89,7 +89,7 @@
 					
 						<div class="col-md-7">
 							<div class="image-block1">
-								<img src="img/Rectangle.png" alt="about">
+								<img src="img/Rectangle.png" alt="about" class='adaptiv'>
 								<div class="yelow-rectangle f-left">
 
 								</div>
@@ -161,7 +161,7 @@
 					
 						<div class="col-md-7">
 							<div class="image-block1">
-								<img src="img/Rectangle.png" alt="about">
+								<img src="img/Rectangle.png" alt="about" class='adaptiv'>
 								<div class="yelow-rectangle f-left">
 
 								</div>
