--- a/rest/index.html
+++ b/rest/index.html
@@ -293,7 +293,7 @@
 							</div>
 							
 						</div>
-						<div class="col-md-4">
+						<div class="col-md-4 delInPhone">
 							<div class="item-menu">
 								<div class="left-part">
 								<p class="name-food">PIZZA QUATRO STAGIONI</p>
